Fix editor palette shifted when active

--- a/tb.css
+++ b/tb.css
@@ -13,6 +13,7 @@ body {
 	border: 3px dashed orange;
 	width: 42px;
 	height: 42px;
+	background-origin: border-box;
 }
 
 .inBoard {
